syntax = "proto3";

package shortener;

import "google/api/annotations.proto";

option go_package="./grpc_domain";

service LinkService {
  rpc Create(CreateLinkRequest) returns (CreateLinkResponse) {
    option (google.api.http) = {
      post: "/create"
      body: "*"
    };
  }
  rpc Get(GetLinkRequest) returns (GetLinkResponse) {
    option (google.api.http) = {
      get: "/rus.tam/{abbreviatedLink}"
    };
  }
}

message CreateLinkRequest {
  string origLink = 1;
}

message CreateLinkResponse {
  string abbreviatedLink = 1;
}

message GetLinkRequest {
  string abbreviatedLink = 1;
}

message GetLinkResponse {
  string origLink = 1;
}